--- a/src/components/Layout/Header/index.css
+++ b/src/components/Layout/Header/index.css
@@ -5,7 +5,6 @@
   height: 30px;
   right: 36px;
   top: 36px;
-  z-index: 1000 !important;
 }
 
 .bm-burger-button > button {
